force-app/main/default/objects/LoanAccount__c/fields/bankId__c.field-meta.xml
<CustomField>
    <fullName>bankId__c</fullName>
    <description>This field will represent the Bank Account this Loan Account is related to.</description>
    <inlineHelpText>Corresponding Bank Account</inlineHelpText>
    <label>Bank</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>