force-app/main/default/objects/LoanAccount__c/fields/isClosed__c.field-meta.xml
<CustomField>
    <fullName>isClosed__c</fullName>
    <description>Stores whether the loan account is completed</description>
    <inlineHelpText>Completion status of the loan account.</inlineHelpText>
    <label>Closed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>