force-app/main/default/objects/LoanAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>status__c</columns>
    <columns>type__c</columns>
    <columns>isClosed__c</columns>
    <columns>bankId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>