force-app/main/default/objects/LoanAccount__c/listViews/LoanAccounts.listView-meta.xml
<ListView>
    <fullName>LoanAccounts</fullName>
    <columns>NAME</columns>
    <columns>status__c</columns>
    <columns>bankId__c</columns>
    <filterScope>Mine</filterScope>
    <label>Loan Accounts</label>
</ListView>